[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StarMallow"
description = "StarMallow framework"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Michiel Vanderlee", email = "jmt.vanderlee@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: StarMallow",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  'apispec[marshmallow]>=5.1,<6',
  'dpath>=2.0.6,<3',
  "marshmallow>=3.11.0,<4",
  "marshmallow-dataclass>=8.3.1,<9",
  "python-multipart >=0.0.5,<0.0.6",
  "pyyaml>=5,<6",
  "starlette>=0.19,<1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mvanderlee/starmallow"


[project.optional-dependencies]
test = [
  "mypy>=1.1.1,<2",
  "pytest >=7.1.3,<8.0.0",
  "ruff ==0.0.260",
]
dev = [
  "ruff ==0.0.260",
  "pre-commit >=2.17.0,<3.0.0",
]


[tool.isort]
profile = "hug"
line_length = 100

[tool.mypy]
strict = true

[tool.ruff]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  # "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
ignore = [
  "B008",  # do not perform function calls in argument defaults
  "B028",  # No explicit stacklevel argument found.
  "C901",  # too complex
]
line-length = 130  # Enforce 130. But ~100 is recommended.


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
