[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starmallow"
description = "StarMallow framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Michiel Vanderlee", email = "jmt.vanderlee@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "apispec[marshmallow] >=6,<7",
  "dpath >=2.1.0,<3",
  "marshmallow >=3.18.0,<4",
  "marshmallow-dataclass >=8.5.1,<9",
  "python-multipart >=0.0.5,<0.0.7",
  "pyyaml >=5.4.1",
  "starlette >=0.19,<1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mvanderlee/starmallow"


[project.optional-dependencies]
all = [
  "orjson",
  "ujson >=3.2.1",
  "uvicorn[standard] >=0.12.0",
]
test = [
  "coverage[toml] >= 6.5.0,< 8.0",
  "httpx >=0.22.0",
  "isort >=5.0.6,<6.0.0",
  "mypy>=1.1.1,<2",
  "pytest >=7.1.3,<8.0.0",
  "ruff ==0.0.260",
]
dev = [
  "isort >=5.0.6,<6.0.0",
  "ruff ==0.0.260",
  "uvicorn[standard] >=0.17.0,<0.22.0",
  "pre-commit >=3.2.0,<4",
]
publish = [
  "hatch >= 1.7.0",
]

[tool.hatch.version]
path = "starmallow/__init__.py"

[tool.isort]
profile = "hug"
line_length = 100

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "starmallow"
]

[tool.ruff]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  # "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
ignore = [
  "B008",  # do not perform function calls in argument defaults
  "B028",  # No explicit stacklevel argument found.
  "C901",  # too complex
]
line-length = 130  # Enforce 130. But ~100 is recommended.


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
