[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starmallow"
description = "StarMallow framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Michiel Vanderlee", email = "jmt.vanderlee@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "apispec[marshmallow] >=6,<7",
  "dpath >=2.1.0,<3",
  "marshmallow >=3.18.0,<4",
  "marshmallow-dataclass2 >=8.8.1,<9",
  "python-multipart >=0.0.20",
  "pyyaml >=5.4.1",
  "starlette >=0.46",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mvanderlee/starmallow"


[project.optional-dependencies]
all = [
  "orjson",
  "ujson >=3.2.1",
  "uvicorn[standard] >=0.12.0",
]
test = [
  "coverage[toml] >= 6.5.0,< 8.0",
  "httpx >=0.22.0",
  "mypy>=1.1.1,<2",
  "pytest >=8",
  "ruff ==0.11.6",
]
dev = [
  "ruff ==0.11.6",
  "uvicorn[standard] >=0.34",
  "pre-commit >=4",
]
publish = [
  "hatch >= 1.7.0",
]

[tool.hatch.version]
path = "starmallow/__init__.py"

[tool.isort]
profile = "hug"
line_length = 100

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "starmallow"
]

[tool.ruff]
lint.exclude = [
    "*.ipynb",
    "examples/**/*.py",
]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    "COM",  # flake8-commas
    "ISC",  # flake8-implicit-str-concat
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "T20",  # flake8-print
    "PT",  # flake8-pytest-style
]
lint.ignore = [
    "B008",  # do not perform function calls in argument defaults
    "B028",  # No explicit stacklevel argument found.
    "C901",  # too complex

    "N818",  # error-suffix-on-exception-name
    "S101",  # Use assert instead of if
]
line-length = 130  # Enforce 130. But ~100 is recommended.

[tool.ruff.lint.pycodestyle]
max-line-length = 150  # E501 reports lines that exceed the length of 150.

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"starmallow/security/*.py" = ["N815"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = [
    "starmallow.dataclasses.required_field",
    "starmallow.dataclasses.optional_field",
    "starmallow.dataclasses.dump_only_field",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

include = [
    "starmallow",
]

pythonVersion = "3.11"
reportInvalidTypeForm = false
